Fix for icons alignment

--- a/Wood.css
+++ b/Wood.css
@@ -344,7 +344,7 @@ ul.thin li {
 #nav_Free a {
     overflow: hidden;
     position: absolute;
-    top: -7px;
+    top: -8px;
     right: 460px;
     background: url('./images/menu/freeleech-sprite.png');
     background-position: 0 8px !important;
@@ -366,7 +366,7 @@ ul.thin li {
     color: transparent !important;
 }#nav_staff {
     position: absolute;
-    margin: -104px 0 0 713px !important;
+    margin: -126px 0 0 713px !important;
 }
 #nav_staff a {
     -moz-box-sizing: border-box;
@@ -403,7 +403,7 @@ ul.thin li {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    margin: -104px 0 0 765px;
+    margin: -126px 0 0 765px;
     float: right;
     height: 42px;
     line-height: 42px;
